# 3D-guardrails

./: .dockerignore  .gitattributes  .gitignore  .python-version  Dockerfile  README.md  demo.py  docker-compose.yaml  entrypoint.sh  packages.txt  pyproject.toml  requirements.txt  test_tiled_fix.py
3d_benchmark/: Dockerfile  README.md  benchmark.py  benchmark_results.csv  entrypoint.sh  requirements.txt
src/dddguardrails/: __init__.py  api.py  config.py  demo.py  guardrail.py  logger_config.py  rendering.py  schemas.py
src/dddguardrails/guardrails/: gemini_llm.py  groq_llm.py  ollama_llm.py  openai_llm.py
tests/: test_scan_e2e.py
tests/data/: belt.glb  bikini_woman.glb  diao_chann.glb  nazi_gemany_eagle_logo.glb  swastika_3D.glb
